- Sat Oct 31 2009 Iñigo Varela <astur@softastur.org>
- Translate Fedora Feedback into Asturian

- Sun Oct 25 2009 Fabian Affolter <fab@fedoraproject.org>
- Verify de-DE version of Fedora Feedback for de-CH

- Wed Oct 14 2009 Martin Stefanov <f0x1@mail.bg>
- Translate Fedora Feedback into Bulgarian

- Wed Oct 7 2009 Piotr Drąg <piotrdrag@gmail.com>
- Update Fedora Feedback in Ukrainian

- Tue Oct 6 2009 Maxim V. Dziumanenko <dziumanenko@gmail.com>
- Update Fedora Feedback in Ukrainian

- Sat Oct 3 2009 Maxim V. Dziumanenko <dziumanenko@gmail.com>
- Translate Fedora Feedback into Ukrainian

- Fri Sep 4 2009 Ville-Pekka Vainio <vpivaini@cs.helsinki.fi>
- Translate Fedora Feedback into Finnish

- Sun Aug 9 2009 Josip Šumečki <shumi.1337@gmail.com>
- Translate Fedora Feedback into Croatian

- Sun Aug 9 2009 Robert Buj <robert.buj@gmail.com>
- Translate Fedora Feedback into Catalan

- Sun Jun 15 2009 Sindre Wetjen <sindre.w@gmail.com>
- Translate Fedora Feedback into Norwegian (Bokmål)

- Fri Jun 05 2009 Oron Peled <oron@actcom.co.il>
- Translate Fedora Feedback into Hebrew

- Thu Jun 04 2009 Jurijs Kolomijecs <admin@irben.id.lv>
- Translate Fedora Feedback into Latvian

- Mon May 25 2009 Nikola Štohanzl <niko@srnet.cz>
- Translate Fedora Feedback into Czech

- Sun May 10 2009 Pavol Šimo <palo.simo@gmail.com>
- Translate Fedora Feedback into Slovak 

- Fri May 08 2009 Arnes Arnautović <arnes99@gmail.com>
- Translate Fedora Feedback into Bosnian

- Sun Apr 19 2009 Manatsawin Hanmongkolchai <manatsawin@gmail.com>
- Translate Fedora Feedback into Thai

- Thu Apr 16 2009 Sveinn í Felli <sveinki@nett.is>
- Translate Fedora Feedback into Icelandic

- Wed Apr 08 2009 Sulyok Peti <sulyokpeti@gmail.com>
- Translate Fedora Feedback into Hungarian

- Mon Mar 23 2009 Göran Uddeborg <goeran@uddeborg.se>
- Translate Fedora Feedback into Swedish

- Fri Mar 20 2009  Noriko Mizumoto <noriko@redhat.com> 
- Update Fedora Feedback in Japanese
