@@ -177,6 +177,11 @@
 		</listitem>
 		<listitem>
 			<para>
+				el-GR — Greek
+			</para>
+		</listitem>
+		<listitem>
+			<para>
 				es-ES — Spanish
 			</para>
 		</listitem>
