@@ -1,3 +1,6 @@
+- Sun Nov 1 2009 Dimitrios Typaldos <dimtyp@gmail.com>
+- Translation of Document Conventions to Greek
+
 - Sat Oct 31 2009 Iñigo Varela <astur@softastur.org>
 - Translation of Document Conventions to Asturian
 
