@@ -1,3 +1,6 @@
+- Sun Nov 1 2009 Dimitrios Typaldos <dimtyp@gmail.com>
+- Translate Fedora Feedback into Greek
+
 - Sat Oct 31 2009 Iñigo Varela <astur@softastur.org>
 - Translate Fedora Feedback into Asturian
 
